# patchwork-agent

./: .env.example  .gitignore  Dockerfile  MEMO.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: USAGE.md  USECASES.md
fixtures/hard_bugs/: mathx.py  textx.py
fixtures/hard_bugs/tests/: test_mathx.py  test_textx.py
fixtures/multi_bug/: bank.py
fixtures/multi_bug/tests/: test_bank.py
fixtures/off_by_one/: calc.py  conftest.py
fixtures/off_by_one/tests/: test_calc.py
fixtures/wrong_operator/: strings.py
fixtures/wrong_operator/tests/: test_strings.py
src/patchwork/: __init__.py  cli.py  config.py  errors.py  observability.py  prompts.py  registry.py
src/patchwork/agent/: __init__.py  context.py  loop.py  subagent.py
src/patchwork/eval/: __init__.py  harness.py
src/patchwork/flows/: __init__.py  repair.py
src/patchwork/llm/: __init__.py  anthropic_client.py  base.py  factory.py  gemini_client.py  groq_client.py
src/patchwork/resilience/: __init__.py  ratelimit.py  retry.py
src/patchwork/tools/: __init__.py  base.py  ci_tools.py  code_tools.py  git_tools.py  github_api.py  github_tools.py  meta_tools.py  orchestration_tools.py  sandbox.py
tests/: conftest.py  fakes.py
tests/integration/: test_repair_flow.py
tests/unit/: test_context.py  test_dynamic_tools.py  test_github_api.py  test_groq_provider.py  test_llm_providers.py  test_registry.py  test_resilience.py  test_schema_and_config.py
